# aioconfig.py

./: LICENSE  README.md  pyproject.toml
aioconfig/: __init__.py  database.py  storage.py
examples/: demo.py
tests/: test_database.py  test_storage.py
