[tool.poetry]
name = "aioconfig"
version = "0.3.0"
description = ""
authors = ["Henry Chang <mr.changyuheng@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5.5"
dataset = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
